Bug 429105 [Solaris] Failed to build mozilla-central on solaris in js module. brendan: review+